subi las imagenes a la nube

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section class="sectionInicio" id="inicio">    
     <!-- Imagen de la mitad de la pagina del lado izquierdo -->
         <div class="imgLogo">
-            <img src="img/logoSinFondo.png" alt="" >
+            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971397/imgPageSanmi/mcrapgxsbgedetogn0hc.png" alt="Logo San Miguel" >
         </div>
 
         <!-- Frase para dar info al negocio -->
@@ -86,17 +86,18 @@
     </div>
     </section>
 
+
     <!-- Div con el ID para que la etiqueta <a> envie directamente a este sector -->
     <section class="sectionCompañias" id="compañias">
         <div >
             <h2>COMPAÑIAS</h2>
             <h3>Trabajamos con estas compañias</h3>
-            <img src="/img/LogoRivadavia.png" alt="">
-            <img src="/img/logoBoston.png" alt="">
-            <img src="/img/logoSMG.png" alt="">
-            <img src="/img/logoExperta.png" alt="">
-            <img src="/img/logoMapfre.png" alt="">
-            <img src="/img/logoLPS.png" alt="">
+            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971395/imgPageSanmi/gmmx2536hatzrebmll6x.png" alt="Logo Rivadavia">
+            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971396/imgPageSanmi/meyew0kcrr5tqxptgng6.png" alt="Logo Boston">
+            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971397/imgPageSanmi/dxoezvabkt3pqpjhmvtn.png" alt="logo SMG">
+            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971395/imgPageSanmi/mrblcoprwzzns0fzhrdi.png" alt="Logo Experta">
+            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971396/imgPageSanmi/ulvwnvtn2c5hqtein9nz.png" alt="Logo Mapfre">
+            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971395/imgPageSanmi/m8f0w1xxsazl3kjqwmgz.png" alt="Logo LPS">
         </div>
     </section>
 
@@ -104,16 +105,17 @@
     <section class="sectionContacto" id="contacto">
         <div >
             <div id="whatsapp">
-                <img src="/img/whatsapp.png" alt="">
+                <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971396/imgPageSanmi/yguzcuiciy3tpsefawx3.png" alt="Whatsapp">
                 <p><a href="">numero oficina</a></p>
             </div>
 
             <div class="email">
-                <img src="/img/gmail.png" alt="">
+                <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971395/imgPageSanmi/jgdvcadwadoqppl6ypil.png" alt="gmail">
+                <p>sanmiguel2909@gmail.com</p>
             </div>
 
             <div class="direccion">
-                <img src="/img/direccion.png" alt="">
+                <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971395/imgPageSanmi/uvhwarinjrxtvohpmues.png" alt="direccion">
                 <p>Eva Duarte de Peron 629</p>
             </div>
         </div>
