mejoro el estilo de la pagina

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>San Miguel asesores y productores de seguros</title>
-    <link rel="shortcut icon" href="/img//logoSinLetrasXXL.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971397/imgPageSanmi/jg33fdu1i0zom3dkqy5g.png" type="image/x-icon">
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -34,7 +34,7 @@
             </li>
 
             <li class="navLink">
-                <a href="#compañias">
+                <a href="#companias">
                     <button class="navButton">
                         <span> COMPAÑIAS</span>
                     </button>
@@ -58,7 +58,9 @@
     <section class="sectionInicio" id="inicio">    
     <!-- Imagen de la mitad de la pagina del lado izquierdo -->
         <div class="imgLogo">
-            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971397/imgPageSanmi/mcrapgxsbgedetogn0hc.png" alt="Logo San Miguel" >
+            <div class="imgContainer">
+            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971397/imgPageSanmi/mcrapgxsbgedetogn0hc.png" alt="Logo San Miguel" class="logo" >
+            </div>
         </div>
 
         <!-- Frase para dar info al negocio -->
@@ -74,31 +76,35 @@
     
     <!-- Div con el ID para que la etiqueta <a> envie directamente a este sector -->
     <section class="sectionSobreNosotros" id="sobreNosotros">
-        <div >
-        <div  >
-            <h2>Sobre nosotros</h2>
-            <p>
+        <div class="divSobreNosotros">
+            <h2 class="titleSobreNosotros">SOBRE NOSOTROS</h2>
+            <p class="fraseSobreNosotros">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam temporibus earum, deleniti sapiente
                 tenetur perspiciatis quos numquam amet corporis necessitatibus sed placeat harum quae fugiat hic qui
                 tempore, sunt beataea?
             </p>
         </div>
-    </div>
+
+            <div class="imgContainerSobreNosotros"> 
+        <img src="https://img.freepik.com/vector-gratis/empleados-reunidos-cocina-oficina-tomando-cafe_74855-5237.jpg?w=1380&t=st=1679015951~exp=1679016551~hmac=26a5a2371346250d0d1948a71c6ddecb7cd78941ea8c8019abb711ba605689de" alt="" class="" width="900px" height="600px">        
+            </div>
     </section>
 
 
     <!-- Div con el ID para que la etiqueta <a> envie directamente a este sector -->
-    <section class="sectionCompañias" id="compañias">
-        <div >
-            <h2>COMPAÑIAS</h2>
-            <h3>Trabajamos con estas compañias</h3>
-            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971395/imgPageSanmi/gmmx2536hatzrebmll6x.png" alt="Logo Rivadavia">
-            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971396/imgPageSanmi/meyew0kcrr5tqxptgng6.png" alt="Logo Boston">
-            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971397/imgPageSanmi/dxoezvabkt3pqpjhmvtn.png" alt="logo SMG">
-            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971395/imgPageSanmi/mrblcoprwzzns0fzhrdi.png" alt="Logo Experta">
-            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971396/imgPageSanmi/ulvwnvtn2c5hqtein9nz.png" alt="Logo Mapfre">
-            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971395/imgPageSanmi/m8f0w1xxsazl3kjqwmgz.png" alt="Logo LPS">
+    <section class="sectionCompanias" id="companias">
+        <div class="divTitleCompanias">
+            <h2>TRABAJAMOS CON</h2>
         </div>
+            <div class="imgCompanias">
+            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971395/imgPageSanmi/gmmx2536hatzrebmll6x.png" alt="Logo Rivadavia" class="logoRivadavia">
+            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971396/imgPageSanmi/meyew0kcrr5tqxptgng6.png" alt="Logo Boston" class="logoBoston">
+            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971397/imgPageSanmi/dxoezvabkt3pqpjhmvtn.png" alt="logo SMG" class="logoSMG">
+            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971395/imgPageSanmi/mrblcoprwzzns0fzhrdi.png" alt="Logo Experta" class="logoExperta">
+            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971396/imgPageSanmi/ulvwnvtn2c5hqtein9nz.png" alt="Logo Mapfre" class="logoMapfre">
+            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971395/imgPageSanmi/m8f0w1xxsazl3kjqwmgz.png" alt="Logo LPS" class="logoLPS">
+        </div>
+    </div>
     </section>
 
     <!-- Div con el ID para que la etiqueta <a> envie directamente a este sector -->
