agrego mejoras de los aspectos del contacto

--- a/index.html
+++ b/index.html
@@ -114,13 +114,14 @@
     <section class="sectionContacto" id="contacto">
    
 
-        <div >
-            <div id="whatsapp">
-                <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091646/imgPageSanmi/sectionContacto/dyqip2cnkqovno1thsby.png" alt="Whatsapp">
-                <p><a href="">numero oficina</a></p>
+    
+            <div id="whatsapp" class="whatsapp">
+                
+                <p><a href="https://wa.me/+543775494791"><img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091646/imgPageSanmi/sectionContacto/dyqip2cnkqovno1thsby.png" alt="Whatsapp">
+                </a></p>
             </div>
 
-            <div class="email">
+            <div class="email" >
                 <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091646/imgPageSanmi/sectionContacto/li9si3mjnitryjpnllgb.png" alt="gmail">
                 <p>sanmiguel2909@gmail.com</p>
             </div>
@@ -129,7 +130,7 @@
                 <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091646/imgPageSanmi/sectionContacto/e5q4yo2jkfofutvjucuk.png" alt="direccion">
                 <p>Eva Duarte de Peron 629</p>
             </div>
-        </div>
+ 
     </section>
 </main>
 
