mejoro el estilo del sectionInicio

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <!-- Frase para dar info al negocio -->
         <div class="fraseInicio">
-            <p>
+            <p class="">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id veniam accusantium aliquam, quam quos quis,
                 culpa maiores, qui consequuntur error adipisci! Commodi tempora rem, quia quis sed ex ullam pariatur.
 
