--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>San Miguel asesores y productores de seguros</title>
     <link rel="shortcut icon" href="https://res.cloudinary.com/dphsynf6f/image/upload/v1678971397/imgPageSanmi/jg33fdu1i0zom3dkqy5g.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
@@ -96,8 +96,8 @@
         </div>
 
             <div class="imgContainerSobreNosotros"> 
-        <img src="https://img.freepik.com/vector-gratis/empleados-reunidos-cocina-oficina-tomando-cafe_74855-5237.jpg?w=1380&t=st=1679015951~exp=1679016551~hmac=26a5a2371346250d0d1948a71c6ddecb7cd78941ea8c8019abb711ba605689de" alt="" class="" width="900px" height="600px">        
-            </div>
+       <!--  <img src="https://img.freepik.com/vector-gratis/empleados-reunidos-cocina-oficina-tomando-cafe_74855-5237.jpg?w=1380&t=st=1679015951~exp=1679016551~hmac=26a5a2371346250d0d1948a71c6ddecb7cd78941ea8c8019abb711ba605689de" alt="" class="" width="900px" height="600px">        
+         -->    </div>
     </section>
 
 
