agrego slider.js

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="style.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+
+
 </head>
 
 <body>
@@ -25,8 +28,6 @@
                     alt="logo" width="70px" height="60px" class="navImg">
             </a>
             <ul>
-
-
 
                 <li class="navLink">
                     <a href="#sectionInicio" id="inicio">
@@ -116,6 +117,8 @@
         <!-- Div con el ID para que la etiqueta <a> envie directamente a este sector -->
         <section class="sectionCompanias" id="sectionCompanias">
 
+            <div class="companies">
+
             <div class="divTitleCompanias">
                 <h2>SOMOS PRODUCTORES DE</h2>
             </div>
@@ -123,44 +126,48 @@
 
                 <div class="divLogoImg">
                     <a href="https://swissmedicalseguros.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091612/imgPageSanmi/sectionCompanias/dpdx4aksx3vqpa0it7m2.png" alt="logo SMG" class="logoSMG">
-                        </a>
+                        <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091612/imgPageSanmi/sectionCompanias/dpdx4aksx3vqpa0it7m2.png"
+                            alt="logo SMG" class="logoSMG">
+                    </a>
                 </div>
 
                 <div class="divLogoImg">
-                    <a href="https://www.boston.com.ar/" target="_blank" rel="noopener noreferrer"> 
-                        <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091586/imgPageSanmi/sectionCompanias/r7txaapthvlp3rywad1q.png" alt="Logo Boston" class="logoBoston">
+                    <a href="https://www.boston.com.ar/" target="_blank" rel="noopener noreferrer">
+                        <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091586/imgPageSanmi/sectionCompanias/r7txaapthvlp3rywad1q.png"
+                            alt="Logo Boston" class="logoBoston">
                     </a>
                 </div>
 
                 <div class="divLogoImg">
                     <a href="https://www.experta.com.ar/" target="_blank" rel="noopener noreferrer">
-                        <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091587/imgPageSanmi/sectionCompanias/hjooedjnghrr3n8lrjob.png" alt="Logo Experta" class="logoExperta">
+                        <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091587/imgPageSanmi/sectionCompanias/hjooedjnghrr3n8lrjob.png"
+                            alt="Logo Experta" class="logoExperta">
                     </a>
                 </div>
 
                 <div class="divLogoImg">
                     <a href="https://www.segurosrivadavia.com/personas/" target="_blank" rel="noopener noreferrer">
-                        <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091587/imgPageSanmi/sectionCompanias/kybbph1g1bgkuucof8mm.png" alt="Logo Rivadavia" class="logoRivadavia">
+                        <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091587/imgPageSanmi/sectionCompanias/kybbph1g1bgkuucof8mm.png"
+                            alt="Logo Rivadavia" class="logoRivadavia">
                     </a>
                 </div>
 
                 <div class="divLogoImg">
-                    <a href="https://www.mapfre.com.ar/" target="_blank" rel="noopener noreferrer">    
+                    <a href="https://www.mapfre.com.ar/" target="_blank" rel="noopener noreferrer">
                         <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091612/imgPageSanmi/sectionCompanias/dxxchoesmiupb9vz07mt.png"
-                        alt="Logo Mapfre" class="logoMapfre">
+                            alt="Logo Mapfre" class="logoMapfre">
                     </a>
                 </div>
 
                 <div class="divLogoImg">
                     <a href="https://www.lps.com.ar/" target="_blank" rel="noopener noreferrer">
                         <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091612/imgPageSanmi/sectionCompanias/gfdbwauczmpd3blakyx5.png"
-                        alt="Logo LPS" class="logoLPS">
+                            alt="Logo LPS" class="logoLPS">
                     </a>
                 </div>
             </div>
 
-
+        </div>
         </section>
 
         <!-- Div con el ID para que la etiqueta <a> envie directamente a este sector -->
