--- a/index.html
+++ b/index.html
@@ -11,10 +11,25 @@
         href="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091555/imgPageSanmi/logo/kteut7dg2stqoedse9kp.png"
         type="image/x-icon">
 
-    <link rel="stylesheet" href="style.css">
+    <!-- SLIDERS -->
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css" rel="stylesheet">
+    <script src="
+https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/js/splide-extension-auto-scroll.min.js
+"></script>
+    <!--  -->
 
+    <!-- CSS GENERAL-->
+    <link rel="stylesheet" href="./css/style.css">
+    <!--  -->
+
+    <!-- CSS SLIDERS -->
+    <link rel="stylesheet" href="./css/sliders.css">
+    <!--  -->
+
+    <!-- ANIMATE.JS  --->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
+    <!-- --->
 
 
 </head>
@@ -119,68 +134,64 @@
 
             <div class="companies">
 
-            <div class="divTitleCompanias">
-                <h2>SOMOS PRODUCTORES DE</h2>
+                <div class="divTitleCompanias">
+                    <h2>SOMOS PRODUCTORES DE</h2>
+                </div>
+                <div class="imgCompanias">
+
+                    <div class="divLogoImg">
+                        <a href="https://swissmedicalseguros.com/" target="_blank" rel="noopener noreferrer">
+                            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091612/imgPageSanmi/sectionCompanias/dpdx4aksx3vqpa0it7m2.png"
+                                alt="logo SMG" class="logoSMG">
+                        </a>
+                    </div>
+
+                    <div class="divLogoImg">
+                        <a href="https://www.boston.com.ar/" target="_blank" rel="noopener noreferrer">
+                            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091586/imgPageSanmi/sectionCompanias/r7txaapthvlp3rywad1q.png"
+                                alt="Logo Boston" class="logoBoston">
+                        </a>
+                    </div>
+
+                    <div class="divLogoImg">
+                        <a href="https://www.experta.com.ar/" target="_blank" rel="noopener noreferrer">
+                            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091587/imgPageSanmi/sectionCompanias/hjooedjnghrr3n8lrjob.png"
+                                alt="Logo Experta" class="logoExperta">
+                        </a>
+                    </div>
+
+                    <div class="divLogoImg">
+                        <a href="https://www.segurosrivadavia.com/personas/" target="_blank" rel="noopener noreferrer">
+                            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091587/imgPageSanmi/sectionCompanias/kybbph1g1bgkuucof8mm.png"
+                                alt="Logo Rivadavia" class="logoRivadavia">
+                        </a>
+                    </div>
+
+                    <div class="divLogoImg">
+                        <a href="https://www.mapfre.com.ar/" target="_blank" rel="noopener noreferrer">
+                            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091612/imgPageSanmi/sectionCompanias/dxxchoesmiupb9vz07mt.png"
+                                alt="Logo Mapfre" class="logoMapfre">
+                        </a>
+                    </div>
+
+                    <div class="divLogoImg">
+                        <a href="https://www.lps.com.ar/" target="_blank" rel="noopener noreferrer">
+                            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091612/imgPageSanmi/sectionCompanias/gfdbwauczmpd3blakyx5.png"
+                                alt="Logo LPS" class="logoLPS">
+                        </a>
+                    </div>
+                </div>
+
             </div>
-            <div class="imgCompanias">
-
-                <div class="divLogoImg">
-                    <a href="https://swissmedicalseguros.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091612/imgPageSanmi/sectionCompanias/dpdx4aksx3vqpa0it7m2.png"
-                            alt="logo SMG" class="logoSMG">
-                    </a>
-                </div>
-
-                <div class="divLogoImg">
-                    <a href="https://www.boston.com.ar/" target="_blank" rel="noopener noreferrer">
-                        <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091586/imgPageSanmi/sectionCompanias/r7txaapthvlp3rywad1q.png"
-                            alt="Logo Boston" class="logoBoston">
-                    </a>
-                </div>
-
-                <div class="divLogoImg">
-                    <a href="https://www.experta.com.ar/" target="_blank" rel="noopener noreferrer">
-                        <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091587/imgPageSanmi/sectionCompanias/hjooedjnghrr3n8lrjob.png"
-                            alt="Logo Experta" class="logoExperta">
-                    </a>
-                </div>
-
-                <div class="divLogoImg">
-                    <a href="https://www.segurosrivadavia.com/personas/" target="_blank" rel="noopener noreferrer">
-                        <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091587/imgPageSanmi/sectionCompanias/kybbph1g1bgkuucof8mm.png"
-                            alt="Logo Rivadavia" class="logoRivadavia">
-                    </a>
-                </div>
-
-                <div class="divLogoImg">
-                    <a href="https://www.mapfre.com.ar/" target="_blank" rel="noopener noreferrer">
-                        <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091612/imgPageSanmi/sectionCompanias/dxxchoesmiupb9vz07mt.png"
-                            alt="Logo Mapfre" class="logoMapfre">
-                    </a>
-                </div>
-
-                <div class="divLogoImg">
-                    <a href="https://www.lps.com.ar/" target="_blank" rel="noopener noreferrer">
-                        <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091612/imgPageSanmi/sectionCompanias/gfdbwauczmpd3blakyx5.png"
-                            alt="Logo LPS" class="logoLPS">
-                    </a>
-                </div>
-            </div>
-
-        </div>
         </section>
 
         <!-- Div con el ID para que la etiqueta <a> envie directamente a este sector -->
         <section class="sectionContacto " id="sectionContacto">
 
-
-
             <div id="whatsapp" class="whatsapp">
                 <a href="https://wa.me/543775494791?text=Quisiera solicitar una cotización">
-
                     <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091646/imgPageSanmi/sectionContacto/dyqip2cnkqovno1thsby.png"
                         alt="Whatsapp">
-
                 </a>
             </div>
 
@@ -192,16 +203,52 @@
 
             <div class="direccion">
                 <a href="https://goo.gl/maps/QSGZ2gYZaspdFqWd9">
-
                     <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679175204/imgPageSanmi/sectionContacto/bnfxtibkl7pykqx9i1ut.png"
                         alt="direccion">
                 </a>
             </div>
 
         </section>
+
+
+
+
+        <section id="image-carousel" class="splide splide_companias" aria-label="Beautiful Images">
+            <div class="splide__track">
+                <ul class="splide__list">
+                    <li class="splide__slide">
+                        <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091612/imgPageSanmi/sectionCompanias/dpdx4aksx3vqpa0it7m2.png"
+                            alt="SMG" class="logoSMG">
+                    </li>
+                    <li class="splide__slide">
+                        <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091612/imgPageSanmi/sectionCompanias/dpdx4aksx3vqpa0it7m2.png"
+                            alt="Boston" class="logoExperta">
+
+                    </li>
+                    <li class="splide__slide">
+                        <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091587/imgPageSanmi/sectionCompanias/kybbph1g1bgkuucof8mm.png"
+                            alt="Rivadavia" class="logoExperta">
+                    </li>
+                    <li class="splide__slide">
+                        <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091587/imgPageSanmi/sectionCompanias/hjooedjnghrr3n8lrjob.png"
+                        alt="Logo Experta" class="logoExperta">
+                    </li>
+                    <li class="splide__slide">
+                        <a href="https://www.mapfre.com.ar/" target="_blank" rel="noopener noreferrer">
+                            <img src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091612/imgPageSanmi/sectionCompanias/dxxchoesmiupb9vz07mt.png"
+                                alt="Logo Mapfre" class="logoMapfre">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+
     </main>
 
-    <script src="index.js"></script>
+    <script src="./js/index.js"></script>
+    <script src="./js/sliders.js"></script>
+
 </body>
 
 </html>
