--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>San Miguel asesores y productores de seguros</title>
 
   <link rel="shortcut icon"
-    href="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091555/imgPageSanmi/logo/kteut7dg2stqoedse9kp.png"
+    href="img/logowhite.png"
     type="image/x-icon" />
 
   <!-- SLIDERS -->
@@ -96,7 +96,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/j
       <div class="fraseInicio">
         <p class="">
 
-          Protegemos lo que más te ha costado obtener, porque tu tranquilidad es nuestra prioridad constante.
+          Protegemos lo que tanto te costo tener, porque tu tranquilidad es nuestra prioridad constante.
         </p>
       </div>
     </section>
@@ -126,10 +126,11 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/j
 
     <!-- AGREGO SPLIDE DE COMPAÑIAS -->
     <section id="sectionCompanias" class="sectionCompanias">
+      <div class="divTitleCompanias">
+        <h2 >SOMOS PRODUCTORES DE</h2>
+      </div>
       <div class="splide_companias">
-        <div class="divTitleCompanias">
-          <h2>SOMOS PRODUCTORES DE</h2>
-        </div>
+        
 
         <section id="image-carousel" class="splide" aria-label="Beautiful Images">
           <div class="splide__track">
@@ -189,28 +190,34 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/j
 
     <!-- Div con el ID para que la etiqueta <a> envie directamente a este sector -->
     <section class="sectionContacto" id="sectionContacto">
+      <div>
+        <h1>Contáctanos</h1>
+      </div>
+      <div class="contactUs">
       <div id="whatsapp" class="whatsapp">
         <a href="https://wa.me/543775494791?text=Quisiera solicitar una cotización">
           <img
             src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091646/imgPageSanmi/sectionContacto/dyqip2cnkqovno1thsby.png"
-            alt="Whatsapp" />
+            alt="WhatsApp" />
         </a>
       </div>
 
       <div class="email">
+       
         <img
           src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091646/imgPageSanmi/sectionContacto/li9si3mjnitryjpnllgb.png"
           alt="gmail" />
-        <span>sanmiguel2909@gmail.com</span>
+          <span>sanmiguel2909@gmail.com</span>
       </div>
 
       <div class="direccion">
         <a href="https://goo.gl/maps/QSGZ2gYZaspdFqWd9">
           <img
             src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679175204/imgPageSanmi/sectionContacto/bnfxtibkl7pykqx9i1ut.png"
-            alt="direccion" />
+            alt="Dirección" />
         </a>
       </div>
+    </div>
     </section>
 
 
