agrego gifs a la seccion de beneficios

--- a/index.html
+++ b/index.html
@@ -141,35 +141,65 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/j
           <div class="beneficios" data-aos="fade-right"
           data-aos-offset="300"
           data-aos-easing="ease-in-sine">
+          <div class="tituloBeneficios">
             <p>AUTOMOTORES</p>
+          </div>
+            <div>
+              <img src="img/auto.gif" alt="" width="150px" height="150px">
+            </div>
           </div>
           <div class="beneficios" data-aos="fade-down"
           data-aos-offset="300"
           data-aos-easing="ease-in-sine">
+          <div class="tituloBeneficios">
             <p>COMBINADO FAMILIAR</p>
+          </div>
+          <div>
+            <img src="img/casa.gif" alt="" width="150px" height="150px">
+          </div>
           </div>
           <div class="beneficios" data-aos="fade-left"
           data-aos-offset="300"
           data-aos-easing="ease-in-sine">
+          <div class="tituloBeneficios">
             <p>ACCIDENTES PERSONALES</p>
+          </div>
+          <div>
+            <img src="img/accPers.gif" alt="" width="150px" height="150px">
+          </div>
           </div>
           <div class="beneficios" data-aos="fade-right"
           data-aos-offset="300"
           data-aos-easing="ease-in-sine">
+          <div class="tituloBeneficios">
             <p>MOTOS</p>
+          </div>
+          <div>
+            <img src="img/moto.gif" alt="" width="150px" height="150px">
+          </div>
           </div>
           <div class="beneficios" data-aos="fade-up"
           data-aos-offset="300"
           data-aos-easing="ease-in-sine">
+          <div class="tituloBeneficios">
             <p>VIDA</p>
+          </div>
+          
+          <div>
+            <img src="img/vida.gif" alt="" width="150px" height="150px">
+          </div>
           </div>
           <div class="beneficios" data-aos="fade-left"
           data-aos-offset="300"
           data-aos-easing="ease-in-sine">
+          <div class="tituloBeneficios">
             <p>INTEGRAL DE COMERCIO</p>
           </div>
-
+          <div>
+            <img src="img/intComercio.gif" alt="" width="150px" height="150px">
+          </div>
           <!-- </div> -->
+        </div>
         </div>
       </section>
 
@@ -308,7 +338,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/j
     </main>
 
     <footer>
-      <p> San Miguel &copy 2023 </p>
+      <p>&copy San Miguel</p>
     </footer>
     
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
