--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/j
 
         <div class="containerBeneficios">
           <!-- <div class="divBeneficios"> -->
-          <div class="beneficios" data-aos="fade-right"
-          data-aos-offset="300"
+            <div class="beneficios" data-aos="fade-right"
+            data-aos-offset="300"
           data-aos-easing="ease-in-sine">
           <div class="tituloBeneficios">
             <p>AUTOMOTORES</p>
@@ -211,13 +211,13 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/j
         class="sectionCompanias"
         
       >
+      <!-- data-aos-anchor-placement="top-center" -->
         <div class="divTitleCompanias" data-aos="fade-down"
-        data-aos-anchor-placement="top-center"
         data-aos-duration="1500">
           <h2>SOMOS PRODUCTORES DE</h2>
         </div>
+       <!--  data-aos-easing="linear" -->
         <div class="splide_companias"    data-aos="fade-left"
-        data-aos-easing="linear"
         data-aos-duration="1500"> 
           <section
             id="image-carousel"
@@ -343,7 +343,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/j
     
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-      AOS.init();
+      AOS.init({ });
     </script>
     <script src="./js/index.js"></script>
     <script src="./js/sliders.js"></script>
