--- a/index.html
+++ b/index.html
@@ -305,17 +305,16 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/j
 
       <!-- Div con el ID para que la etiqueta <a> envie directamente a este sector -->
       <section class="sectionContacto" id="sectionContacto">
-        <div data-aos="fade-down"
+        <div data-aos="zoom-in-right"
         data-aos-duration="1500" >
           <h1>CONTÁCTANOS</h1>
         </div>
-        <div class="contactUs" data-aos="fade-up"
-        data-aos-offset="300"
-        data-aos-easing="ease-in-sine">
+        <div class="contactUs" id="contactUs" data-aos="flip-up">
+
           <div id="whatsapp" class="whatsapp"  >
             <a
               href="https://wa.me/543775494791?text=Quisiera solicitar una cotización"
-            >
+            target="_blank">
               <img
                 src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679091646/imgPageSanmi/sectionContacto/dyqip2cnkqovno1thsby.png"
                 alt="WhatsApp"
@@ -331,14 +330,16 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/j
             <span>sanmiguel2909@gmail.com</span>
           </div>
 
-          <div class="direccion" >
-            <a href="https://goo.gl/maps/QSGZ2gYZaspdFqWd9">
+          <div class="direccion">
+
+            <a href="https://goo.gl/maps/QSGZ2gYZaspdFqWd9" target="_blank">
               <img
                 src="https://res.cloudinary.com/dphsynf6f/image/upload/v1679175204/imgPageSanmi/sectionContacto/bnfxtibkl7pykqx9i1ut.png"
                 alt="Dirección"
               />
             </a>
           </div>
+
         </div>
       </section>
 
